# image-cli

./: .env.example  .gitignore  CHANGELOG.md  FEATURES.md  IMAGE-EDITING-GUIDE.md  INSTALL.md  QUICK-START.md  README.md  install.sh  pyproject.toml
gemini-extensions/image-prompt-expert/: gemini-extension.json  image-prompt-expert.md
imagen_cli/: __init__.py  main.py
